--- a/styleSheetWeek4.css
+++ b/styleSheetWeek4.css
@@ -16,7 +16,8 @@ body {
     position: absolute;
     top: 5%;
     left: 20%;
-    max-width: 50px;
+    width: 50%;
+    height: auto;
 }
 
 .right_eye {
