--- a/week6/pizzas.css
+++ b/week6/pizzas.css
@@ -94,7 +94,7 @@ a {
     border-style: solid;
     border-color: #aa7555;
     margin: 20px;
-
+    width: 500px;
 }
 
 #daisy_img {
@@ -111,12 +111,12 @@ a {
     align-content:flex-start; /*center vertically*/
 
     align-items:start;
-    justify-content:start;
+    justify-content:space-between;
 }
 
 .collage_flex_object { 
     align-self: center; /*center vertically on each row*/
-    flex-basis: 1300px; /*row width*/
+    flex-basis: 500px; /*row width*/
     padding: 10px;
     border-width: 4px;
     border-style: double;
