--- a/week6/pages/pizzas.css
+++ b/week6/pages/pizzas.css
@@ -199,3 +199,45 @@ h4 {
 }
 
 /*end of daisy dilly*/
+
+
+/* start of author*/
+.author_container { 
+    border: 10px solid black;
+    padding: 20px;
+    display: flex;
+
+    flex-wrap: wrap; /*wrap text around to next row*/
+    
+    flex-direction: column;
+    align-items:center;
+    justify-content:center;
+}
+
+.author_container_object { 
+    align-self: center; /*center vertically on each row*/
+    padding: 10px;
+    border-width: 5px;
+    border-style: solid;
+    margin: 10px;
+    max-width: 800px;
+    text-align: center;
+}
+
+/*end of author*/
+
+
+/*reactions pg for the big pix*/
+.flex_object2 {
+    align-self: center; /*center vertically on each row*/
+    flex-basis: 1400px; /*row width*/
+    padding: 20px;
+    border-width: 8px;
+    border-style: solid;
+    border-color: #aa7555;
+    margin: 10px;
+    width: 1400px;
+}
+/*end*/
+
+
