--- a/week10/theStyle.css
+++ b/week10/theStyle.css
@@ -30,9 +30,9 @@ h3 {
     padding: 5px;
     display: flex;
     flex-wrap: wrap;
-    align-items:center;
+    align-items: flex-end;
     justify-content:center;
-    width: 800px;
+    width: 1200px;
     height: 500px;
 }
 
