--- a/week11/theStyle.css
+++ b/week11/theStyle.css
@@ -46,14 +46,41 @@ h1 {
     grid-template-rows: repeat(5, 1fr);
 }
 
-/* #time { 
+
+/* index.html retrieving name form */
+
+#name_text {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+
+
+    margin: 10px;
+    z-index: 4;
+}
+
+#name_input {
+    background-image: url("assets/textbox.png");
+    background-size: 200px;
+    background-position: 50% 30%;
+    background-repeat: no-repeat;
+    margin: 20px;
+    
+    color: black;
     grid-column-start: 1;
     grid-column-end: 5;
-    grid-row-start: 1;
-    grid-row-end: 4;
+    grid-row-start: 5;
+    grid-row-end: 6;
 
-    z-index: -1;
-} */
+    z-index: 1;
+}
+
+
+
+/*end of name form*/
+
+
 
 #clock {
     grid-column-start: 1;
@@ -66,6 +93,20 @@ h1 {
 
 #clock > img {
     height: 70%;
+}
+
+#status_bar {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 1; 
+    grid-row-end: 2;
+    
+    margin: 10px;
+    z-index: 4;
+}
+
+#status_bar > img {
+    height: 50%;
 }
 
 #textbox {
@@ -82,20 +123,6 @@ h1 {
     grid-row-end: 6;
 
     z-index: 1;
-}
-
-#status_bar {
-    grid-column-start: 1;
-    grid-column-end: 4;
-    grid-row-start: 1; 
-    grid-row-end: 2;
-    
-    margin: 10px;
-    z-index: 4;
-}
-
-#status_bar > img {
-    height: 50%;
 }
 
 #ghost {
