--- a/week11/theStyle.css
+++ b/week11/theStyle.css
@@ -28,8 +28,11 @@ h1 {
 }
 
 #game_container {  
+    background-image: url('assets/day.PNG');
     background-image: url('assets/night.PNG');
+    
     background-size: 800px 500px; /*entire day night*/
+    transition: background-image 20s ease-out;
 
     width: 800px;
     height: 500px;
@@ -46,28 +49,49 @@ h1 {
     grid-template-rows: repeat(5, 1fr);
 }
 
-
 /* index.html retrieving name form */
+
+input[type=text] {
+    width: 25%; height: 100%;
+    padding: 0px;
+    margin: 10px;
+    border: 4px solid black;
+    border-radius: 4px;
+    background-color: none;
+    font-family: ArcadeClassic;
+    font-size: 65px;
+    text-align: center;
+}
+
+input[type=submit] {
+    background-color: black;
+    color: white;
+    font-family: ArcadeClassic;
+    font-size: 65px;
+}
 
 #name_text {
     grid-column-start: 1;
-    grid-column-end: 4;
+    grid-column-end: 5;
     grid-row-start: 1;
     grid-row-end: 2;
 
-
-    margin: 10px;
-    z-index: 4;
+    color: white;
+    font-family: ArcadeClassic;
+    
+    padding: 10px;
+    margin: 20px;
 }
 
 #name_input {
-    background-image: url("assets/textbox.png");
-    background-size: 300px;
+    /*background-image: url("assets/textbox.png");
+    background-size: 70%;
     background-position: 50% 80%;
     background-repeat: no-repeat;
-    margin: 20px;
+    margin: 5px;*/
     
     color: black;
+    font-family: ArcadeClassic;
     grid-column-start: 1;
     grid-column-end: 5;
     grid-row-start: 5;
@@ -153,6 +177,8 @@ h1 {
     grid-row-start: 5;
     grid-row-end: 6;
 
+    padding: 10px;
+    margin: 20px;
     color: black;
     font-family: ArcadeClassic;
 }
